chore: fix code smells and issues